Fixed alignment issues

--- a/horizontal-chat/style.css
+++ b/horizontal-chat/style.css
@@ -47,6 +47,7 @@ html {
 	bottom: 0;
 	right: 0;
 	display: flex;
+	align-items: flex-end;
 	flex-direction: row;
 	flex-wrap: nowrap;
 	text-justify: right;
